--- a/KZ_Ingenico_EPI.csproj
+++ b/KZ_Ingenico_EPI.csproj
@@ -45,5 +45,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrposiXLib.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Supply folder\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
