Made GetResp to work

--- a/KZ_Ingenico_TransportLibApp/KZ_Ingenico_TransportLibApp.csproj
+++ b/KZ_Ingenico_TransportLibApp/KZ_Ingenico_TransportLibApp.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{07B244B2-81EE-4278-B0D3-F50DC41B95FE}</ProjectGuid>
+    <ProjectGuid>{6AC47ABA-75F6-4980-8F62-F7465899CDAA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>KZ_IgenicoApp</RootNamespace>
-    <AssemblyName>KZ_IgenicoApp</AssemblyName>
+    <RootNamespace>KZ_Ingenico_TransportLibApp</RootNamespace>
+    <AssemblyName>KZ_Ingenico_TransportLibApp</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -26,7 +26,6 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
-    <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -48,24 +47,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <ManifestCertificateThumbprint>6A491724852A666010C3E4B300234FBC2D65FDCB</ManifestCertificateThumbprint>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ManifestKeyFile>KZ_IgenicoApp_TemporaryKey.pfx</ManifestKeyFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
-  </PropertyGroup>
-  <PropertyGroup>
-    <TargetZone>LocalIntranet</TargetZone>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignManifests>false</SignManifests>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -78,18 +59,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="TRPOSXLib">
-      <HintPath>..\Supply folder\TRPOSXLib.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomerDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CustomerDialog.Designer.cs">
-      <DependentUpon>CustomerDialog.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Ethernet.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,11 +70,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Response.cs" />
-    <Compile Include="TrposXLib.cs" />
-    <EmbeddedResource Include="CustomerDialog.resx">
-      <DependentUpon>CustomerDialog.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="TLVDecode.cs" />
+    <Compile Include="TrposX_TLV.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,8 +84,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="KZ_IgenicoApp_TemporaryKey.pfx" />
-    <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
