--- a/KZ_Ingenico_EPI.csproj
+++ b/KZ_Ingenico_EPI.csproj
@@ -31,8 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SkiData.ElectronicPaymentInterface, Version=5.4.0.0, Culture=neutral, PublicKeyToken=d49c6c683ad30fe9, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Program Files (x86)\SKIDATA\SKIDATA Electronic Payment SDK V5.4\Lib\SkiData.ElectronicPaymentInterface.dll</HintPath>
+    </Reference>
+    <Reference Include="SkiData.Parking.ElectronicPayment.Extensions, Version=24.1.0.1, Culture=neutral, PublicKeyToken=77b7d1dfd1837f64, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Program Files (x86)\SKIDATA\SKIDATA Electronic Payment SDK V5.4\Lib\SkiData.Parking.ElectronicPayment.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,12 +50,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KZ_Ingenico_EPI.cs" />
+    <Compile Include="CountTransaction.cs" />
+    <Compile Include="StringValue.cs" />
+    <Compile Include="EPI_CashDesk.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TrposiXLib.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="SQLConnect.cs" />
+    <Compile Include="TrposXLib.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Supply folder\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SupportInfo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
