--- a/KZ_Ingenico_EPI/KZ_Ingenico_EPI.csproj
+++ b/KZ_Ingenico_EPI/KZ_Ingenico_EPI.csproj
@@ -65,7 +65,9 @@
       <HintPath>..\..\..\Program Files (x86)\SKIDATA\SKIDATA Electronic Payment SDK V5.4\Lib\SkiData.Parking.ElectronicPayment.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
